--- a/bear.html
+++ b/bear.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <h1>Your word is:</h1>
-  <img src="bear" alt="bear">
+  <img src="https://www.nps.gov/lacl/learn/nature/images/Image-w-cred-cap_-1200w-_-Brown-Bear-page_-brown-bear-in-fog_2.jpg?maxwidth=1300&maxheight=1300&autorotate=false&format=webp" alt="bear">
   <h1>BEAR</h1>
   <p>Mime this word without speaking.</p>
 </body>
