--- a/bear.html
+++ b/bear.html
@@ -2,13 +2,14 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>No Word – Elephant</title>
+  <title>No Word – Bear</title>
   <style>
     body {
-      background: #fefefe;
+      background: #005257;
       font-family: Arial;
       text-align: center;
       padding: 30px;
+      
     }
     img {
       max-width: 90%;
@@ -16,11 +17,11 @@
     }
     h1 {
       font-size: 42px;
-      color: #333;
+      color: #ffe8d2;
     }
     p {
       font-size: 22px;
-      color: #555;
+      color: #946f5c;
     }
   </style>
 </head>
