Update title and styling for bear.html

--- a/bear.html
+++ b/bear.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>No Word – Bear</title>
+  <title>No Word –Brown Bear</title>
   <style>
     body {
       background: #005257;
@@ -17,18 +17,18 @@
     }
     h1 {
       font-size: 42px;
-      color: #ffe8d2;
+      color: #946f5c;
     }
     p {
       font-size: 22px;
-      color: #946f5c;
+      color: #ffe8d2;
     }
   </style>
 </head>
 <body>
   <h1>Your word is:</h1>
-  <img src="https://www.nps.gov/lacl/learn/nature/images/Image-w-cred-cap_-1200w-_-Brown-Bear-page_-brown-bear-in-fog_2.jpg?maxwidth=1300&maxheight=1300&autorotate=false&format=webp" alt="bear">
-  <h1>BEAR</h1>
+  <img src="bear.webp" alt="Brwon bear">
+  <h1>BROWN BEAR</h1>
   <p>Mime this word without speaking.</p>
 </body>
 </html>
