--- a/pancackes.html
+++ b/pancackes.html
@@ -29,7 +29,7 @@
 <body>
   <h1>Your word is:</h1>
   <img src="pancackes.jpg" alt="pancackes">
-  <h1>pancackes</h1>
+  <h1>PANCACKES</h1>
   <p>Mime this word without speaking.</p>
 </body>
 </html>
