--- a/goldcrown.html
+++ b/goldcrown.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <h1>Your word is:</h1>
-  <img src="goldcrown.jpg" alt="goldcrown">
+  <img src="goldencrown.jpg" alt="goldcrown">
   <h1>GOLDCRWON</h1>
   <p>Mime this word without speaking.</p>
 </body>
