--- a/hacker.html
+++ b/hacker.html
@@ -29,7 +29,7 @@
 <body>
   <h1>Your word is:</h1>
   <img src="hacker.webp" alt="hacker">
-  <h1>HCAKER</h1>
+  <h1>HACKER</h1>
   <p>Mime this word without speaking.</p>
 </body>
 </html>
