--- a/snowman.html
+++ b/snowman.html
@@ -28,7 +28,7 @@
 <body>
   <h1>Your word is:</h1>
   <img src="snowman.jpg" alt="Snowman">
-  <h1>Snow Man</h1>
+  <h1>Snowman</h1>
   <p>Mime this word without speaking.</p>
 </body>
 </html>
