--- a/goldcrown.html
+++ b/goldcrown.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>No Word –goldcrown</title>
+  <title>No Word –Goldcrown</title>
   <style>
     body {
       background: #005257;
