--- a/pancakes.html
+++ b/pancakes.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>No Word –pancackes</title>
+  <title>No Word –pancakes</title>
   <style>
     body {
       background: #005257;
@@ -28,8 +28,8 @@
 </head>
 <body>
   <h1>Your word is:</h1>
-  <img src="pancackes.jpg" alt="pancackes">
-  <h1>PANCACKES</h1>
+  <img src="pancackes.jpg" alt="pancakes">
+  <h1>PANCAKES</h1>
   <p>Mime this word without speaking.</p>
 </body>
 </html>
