--- a/secretagent.html
+++ b/secretagent.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>No Word –secretagent</title>
+  <title>No Word –Secretagent</title>
   <style>
     body {
       background: #005257;
@@ -29,7 +29,7 @@
 <body>
   <h1>Your word is:</h1>
   <img src="secretagent.jpg" alt="secretagent">
-  <h1>SECRETAGENT</h1>
+  <h1>SECRET AGENT</h1>
   <p>Mime this word without speaking.</p>
 </body>
 </html>
